# Haven_Backend

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.dev  README.md  db.txt  docker-compose.yml
.agent/: CONTINUITY.md
docs/: openapi.yaml
migrations/: 0001_create_users.sql  0002_create_auth_sessions.sql  0003_create_servers_channels_members_messages_sessions.sql  0004_add_e2ee_key_management.sql  0006_create_email_verification_and_totp_setup.sql  0007_create_friend_system.sql  0008_add_performance_indexes.sql  0009_add_srp_columns.sql  0010_create_dm_threads_and_messages.sql  0011_encrypt_pii_and_add_email_blind_index.sql  0012_encrypt_totp_payloads.sql  0012_fix_dm_thread_pair_constraint.sql
scripts/: README.md  auto-pull-deploy.sh  install-auto-pull-service.sh
src/: auth.rs  config.rs  crypto.rs  email.rs  error.rs  main.rs  maintenance.rs  security.rs  state.rs
src/domain/: auth.rs  chat.rs  e2ee.rs  friends.rs  mod.rs  realtime.rs  user.rs
src/repository/: auth_repository.rs  cache_repository.rs  chat_repository.rs  e2ee_repository.rs  friends_repository.rs  health_repository.rs  mod.rs  realtime_repository.rs  user_repository.rs
src/routes/: auth.rs  health.rs  mod.rs  users.rs
src/service/: auth_service.rs  chat_service.rs  e2ee_service.rs  friends_service.rs  health_service.rs  mod.rs  realtime_service.rs  srp_service.rs  user_service.rs
src/transport/http/: auth.rs  chat.rs  e2ee.rs  friends.rs  health.rs  mod.rs  users.rs
src/transport/ws/: mod.rs
