[package]
name = "haven-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
argon2 = "0.5"
chrono = { version = "0.4", features = ["serde"] }
deadpool-redis = "0.22"
rand = "0.8"
redis = { version = "0.32", features = ["tokio-comp"] }
rusty_paseto = { version = "0.7", features = ["batteries_included", "v4_local"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-rustls", "chrono"] }
thiserror = "2"
time = "0.3"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["trace", "cors", "limit"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
validator = { version = "0.20", features = ["derive"] }
dotenvy = "0.15.7"
